--- a/src/components/PublicationStyles.css
+++ b/src/components/PublicationStyles.css
@@ -41,7 +41,7 @@
 .padding-vertical.padding-xhuge.nav-margin.lateral-pad {
   /* padding: 7rem; */
   padding-top: 15rem;
-  padding-right: 0rem;
+  padding-left: 14rem;
 }
 
 /* h1 {
@@ -56,4 +56,69 @@
   width: 100%;
   height: 300px;
   object-fit: cover;
+}
+
+.publication {
+  grid-template-rows: auto;
+  grid-template-columns: 1fr;
+  margin-bottom: 0;
+  display: block;
+}
+
+.paper-details {
+  border-top: 2px solid rgba(25, 30, 32, 0.05);
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  /* padding-left: 2rem; */
+  opacity: 1;
+  box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.1);
+  width: 70%;
+}
+
+.text-size-regular {
+  padding-top: 1rem;
+  text-align: left;
+}
+
+.publication-list {
+  padding-top: 5rem;
+  padding-bottom: 2rem;
+  padding-left: 2rem;
+  /* width: 70%; */
+  margin-left: 20%;
+}
+
+.reference-link {
+  background-color: transparent;
+  border-color: #000;
+  font-weight: 500;
+  color: inherit;
+  text-decoration: inherit;
+  font-size: inherit;
+  max-width: 80%;
+  display: inline-block;
+  width: 100%;
+}
+
+.heading-small {
+  font-size: 1.5rem;
+  font-weight: 600;
+  line-height: 1.4;
+  color: #000;
+}
+.max-width-medium {
+  width: 100%;
+  /* max-width: 55rem; */
+}
+
+/* .formatted-reference{
+  cursor: pointer;
+} */
+
+.heading-large {
+  text-align: left;
+}
+
+.text-size-medium {
+  text-align: left;
 }
