--- a/src/components/AboutUsStyles.css
+++ b/src/components/AboutUsStyles.css
@@ -9,7 +9,7 @@
 }
 .card {
   /* padding: 10% 0 0 0; */
-  height: 400px;
+  height: 20%;
   background-color: #191e20;
   line-height: 1.8;
 }
@@ -18,6 +18,7 @@
   font-size: 2.5rem;
   font-weight: 600;
   line-height: 1.2;
+  text-align: center;
 }
 
 .card h1 {
@@ -60,7 +61,7 @@
 
 .container-small {
   width: 100%;
-  max-width: 50rem;
+  max-width: 80%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -70,17 +71,14 @@
   padding-bottom: 7rem;
 }
 
-.reserach-padding h1 {
-  text-align: left;
-}
-
 .research-para {
-  margin-top: 1.5rem;
+  margin-top: 2.5rem;
   text-align: justify;
   width: 100%;
   height: 100%;
   font-size: 1.125rem;
   margin-bottom: 0;
+  line-height: 2.5rem;
 }
 
 .section-blog66 {
