--- a/src/components/CardStyles.css
+++ b/src/components/CardStyles.css
@@ -1,5 +1,5 @@
 .card-template {
-  margin: 8rem;
+  margin: 10% 6rem;
   color: #2a2a2a;
 }
 
@@ -15,18 +15,18 @@
   margin-top: 3rem;
   margin-left: 9.8rem;
   /* display: flex; */
-  justify-content: space-around;
+  justify-content: space-between;
   margin-block-end: 2rem;
 }
 
 .t-card {
   width: 90%;
-  height: 400px;
+  /* height: 400px; */
   text-align: start;
   box-shadow: 0 5px 35px 2px rgba(0, 0, 0, 0.1);
   border-radius: 7px;
   cursor: pointer;
-  padding: 1rem;
+  padding: 1rem 0.9rem;
   margin-block-end: 2rem;
 }
 
@@ -52,4 +52,35 @@
 .t-card h4 {
   font-size: 1.3rem;
   padding: 0.9rem 0 0.2rem 0;
+}
+
+.project-para {
+  /* font-size: 1.3rem;
+  font-weight: 100;
+  color: #fff; */
+  padding-top: 2%;
+  line-height: 1.7rem;
+}
+
+.parap-br {
+  padding-top: 2%;
+}
+
+@media screen and (max-width: 850px) {
+  .card-template {
+    /* margin: 8rem 2rem; */
+    margin: 10% 2rem;
+  }
+
+  .project-card {
+    flex-direction: column;
+    margin-left: 2rem;
+    margin-top: 8rem;
+  }
+
+  .t-card {
+    width: 100%;
+    margin-top: 2rem;
+    /* margin-bottom: 1.5rem; */
+  }
 }
