--- a/src/components/HeroStyles.css
+++ b/src/components/HeroStyles.css
@@ -6,7 +6,14 @@
 
 .hero-mid {
   width: 100%;
-  height: 70vh;
+  height: 60vh;
+  position: relative;
+  background-position: top right;
+}
+
+.hero-low {
+  width: 100%;
+  height: 50vh;
   position: relative;
   background-position: top right;
 }
@@ -44,7 +51,10 @@ img {
   font-size: 1.3rem;
   font-weight: 500;
   color: #fff;
-  padding: 0.5re, 0 2re, 0;
+  padding:
+    0.5re,
+    0 2re,
+    0;
 }
 
 @media screen and (max-width: 555px) {
