--- a/src/components/MembersStyles.css
+++ b/src/components/MembersStyles.css
@@ -1,44 +1,3 @@
-/* CSS for the Card */
-.card {
-  display: flex;
-  border: 1px solid #ccc;
-  border-radius: 40px;
-  padding: 166px;
-  margin: 156px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  background-color: #567daf;
-  max-height: 200px;
-  color: rgb(12, 11, 11);
-}
-
-.card-image {
-  flex: 1;
-  max-width: 300px; /* Increase the max-width for a larger image */
-  margin-right: 106px; /* Add some spacing between the image and description */
-  margin-top: -110px;
-  margin-bottom: 200px;
-}
-
-.card-image img {
-  width: 100%;
-  height: 240px;
-  border-radius: 4px;
-}
-
-.card-description {
-  flex: 2;
-}
-
-.card-description h2 {
-  font-size: 1.5rem;
-  margin: 0;
-}
-
-.card-description p {
-  font-size: 1rem;
-  margin-top: 8px;
-}
-
 /* .imgBx {
   width: 200px;
   height: 200px;
@@ -74,14 +33,32 @@
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  margin: 40px 0;
+  margin: 2% 5% 5% 5%;
+}
+
+.outline {
+  position: relative z-index1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-top: 8%;
+}
+
+.outline1 {
+  position: relative z-index1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-top: 1%;
 }
 
 .members-card {
   /* margin-top: 20%; */
   position: relative;
-  width: 300px;
-  height: 400px;
+  width: 250px;
+  height: 350px;
   background: rgba(255, 255, 255, 0.05);
   margin: 20px;
   box-shadow: 0 5px 35px 2px rgba(0, 0, 0, 0.1);
@@ -117,8 +94,8 @@ members-card::hover {
   border: 5px solid rgba(0, 0, 0, 0.25);
 }
 
-.img{
-  position:absolute;
+.img {
+  position: absolute;
   top: 0%;
   left: 0%;
   width: 100%;
@@ -126,18 +103,87 @@ members-card::hover {
   object-fit: cover;
 }
 
-.contentBx  h3{
+.contentBx h3 {
   text-transform: uppercase;
   letter-spacing: 2px;
   font-weight: 500;
   font-size: 18px;
   text-align: center;
+  padding-top: 30px;
   margin: 20px 0 10pm;
   line-height: 1.1em;
 }
 
-.contentBx  h3 span{
+.contentBx h3 span {
   text-transform: initial;
   font-weight: 300;
   font-size: 12px;
+}
+
+.member-content {
+  margin: 8rem;
+  color: #2a2a2a;
+}
+
+.card-template h1 {
+  font-size: 2.6rem;
+  font-weight: 620;
+  line-height: 1.2;
+  text-align: justify;
+  margin-left: 9.8rem;
+}
+
+.member-card-outline {
+  margin-top: 3rem;
+  margin-left: 9.8rem;
+  /* display: flex; */
+  justify-content: space-around;
+  margin-block-end: 2rem;
+}
+
+.member-card {
+  width: 90%;
+  height: 400px;
+  text-align: start;
+  box-shadow: 0 5px 35px 2px rgba(0, 0, 0, 0.1);
+  border-radius: 7px;
+  cursor: pointer;
+  padding: 1rem;
+  margin-block-end: 2rem;
+}
+
+.m-image {
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
+  border-radius: 7px;
+  float: right;
+}
+
+.m-image img {
+  width: 100%;
+  height: 100%;
+  transition: 0.3s ease-in-out;
+  border-radius: 7px;
+}
+
+.m-image:hover img {
+  transform: scale(1.3);
+}
+
+.m-card h4 {
+  font-size: 1.3rem;
+  padding: 0.9rem 0 0.2rem 0;
+}
+
+@media screen and (max-width: 555px) {
+  .outline {
+    /* position: relative z-index1; */
+    /* display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap; */
+    margin: 30% 0;
+    /* padding-top: 500px; */
+  }
 }
