--- a/src/components/NavbarStyles.css
+++ b/src/components/NavbarStyles.css
@@ -41,7 +41,14 @@
   background-color: rgb(228, 5, 5);
   color: #fff;
   border-radius: 4px;
-  transition: all, 0.2s ease-in-out;
+  transition:
+    all,
+    0.2s ease-in-out;
+}
+
+.home-link {
+  text-decoration: none;
+  color: #222;
 }
 
 .menu-icons {
@@ -87,6 +94,7 @@
     background-color: rgb(228, 5, 5);
     transition: none;
   }
+
 
   .menu-icons {
     display: block;
