--- a/src/components/CardStyles.css
+++ b/src/components/CardStyles.css
@@ -11,11 +11,20 @@
   margin-left: 9.8rem;
 }
 
+.medium-font {
+  color: black;
+  margin-top: 2%;
+  margin-bottom: 1%;
+  font-size: 1.125rem;
+  text-align: left;
+}
+
 .project-card {
   margin-top: 3rem;
   margin-left: 9.8rem;
   /* display: flex; */
-  justify-content: space-between;
+  /* flex-direction: column; */
+  justify-content: space-around;
   margin-block-end: 2rem;
 }
 
@@ -27,7 +36,7 @@
   border-radius: 7px;
   cursor: pointer;
   padding: 1rem 0.9rem;
-  margin-block-end: 2rem;
+  margin-block-end: 4rem;
 }
 
 .t-image {
@@ -55,15 +64,23 @@
 }
 
 .project-para {
-  /* font-size: 1.3rem;
-  font-weight: 100;
-  color: #fff; */
-  padding-top: 2%;
-  line-height: 1.7rem;
+  margin-top: 1rem;
+  text-align: justify;
+  width: 100%;
+  height: 100%;
+  font-size: 1.125rem;
+  margin-bottom: 0;
+  line-height: 2.3rem;
 }
 
+.team {
+  line-height: 2.3rem;
+}
 .parap-br {
   padding-top: 2%;
+}
+.content-format {
+  /* padding-left: 2%; */
 }
 
 @media screen and (max-width: 850px) {
