--- a/src/components/PublicationStyles.css
+++ b/src/components/PublicationStyles.css
@@ -35,6 +35,7 @@
   display: block;
   background-color: #f4f4f4;
   position: relative;
+  height: 400px;
   /* height: 410px; */
 }
 
@@ -111,14 +112,35 @@
   /* max-width: 55rem; */
 }
 
+.year-heading {
+  font-size: 1.5rem;
+  font-weight: 600;
+  line-height: 1.4;
+  color: #000;
+  padding-top: 5%;
+}
 /* .formatted-reference{
   cursor: pointer;
 } */
 
 .pu-heading {
-  text-align: left;
+  text-align: center;
+  padding-top: 10%;
 }
 
 .text-size-medium {
-  text-align: left;
+  text-align: center;
+  /* padding-top: 10%; */
+}
+
+@media screen and (max-width: 850px) {
+  .pu-heading {
+    text-align: center;
+    padding-top: 50%;
+  }
+
+  .text-size-medium {
+    text-align: center;
+    /* padding-top: 10%; */
+  }
 }
