--- a/src/components/PublicationStyles.css
+++ b/src/components/PublicationStyles.css
@@ -66,14 +66,20 @@
   display: block;
 }
 
+.cursive-text {
+  font-family: "Poppins", sans-serif;
+  font-style: italic;
+}
+
 .paper-details {
   border-top: 2px solid rgba(25, 30, 32, 0.05);
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
   /* padding-left: 2rem; */
   opacity: 1;
   box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.1);
-  width: 70%;
+  /* width: 70%; */
+  text-align: justify;
 }
 
 .text-size-regular {
@@ -84,9 +90,9 @@
 .publication-list {
   padding-top: 5rem;
   padding-bottom: 2rem;
-  padding-left: 2rem;
-  /* width: 70%; */
-  margin-left: 20%;
+  /* padding-left: 2rem; */
+  width: 90%;
+  margin-left: 15%;
 }
 
 .reference-link {
@@ -102,8 +108,8 @@
 }
 
 .heading-small {
-  font-size: 1.5rem;
-  font-weight: 600;
+  /* font-size: 1.5rem; */
+  /* font-weight: 600; */
   line-height: 1.4;
   color: #000;
 }
